package com.avanzada.entity;

/**
 * Priority level for a request (RF-03).
 */
public enum Priority {
    LOW,
    MEDIUM,
    HIGH
}
